Add schema file

--- a/script/Build
+++ b/script/Build
@@ -9,14 +9,13 @@ if [ "$(docker ps -q -f name=$mysql_container)" ]
 then
     echo ">> Exporting database from container..."
 
-    if [ -f ../database/schema.sql ]; then
-        docker exec -i $mysql_container mysqldump -u $mysql_user \
-                                                 --password=$mysql_password \
-                                                 $database_name > ../database/schema.sql &> /dev/null
+    (docker exec -i $mysql_container mysqldump -u $mysql_user \
+                                                --password=$mysql_password \
+                                                $database_name > ../database/schema.sql) &> /dev/null
+    if [ $? -eq 0 ]; then
         echo "Done"
     else
-        echo "Failed: ../database/schema.sql No such file or directory"
-        exit 1
+        echo "Failed"
     fi
 fi
 
